# sdsl

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: cmake-multi-platform.yml  python-test.yml
apps/: CMakeLists.txt
apps/cpp_demo/: CMakeLists.txt  main.cpp
data/data2d/notebooks/: frog.ipynb  jrdb.ipynb
data/data2d/ros_frog/: .gitignore  README.md  localize_start.zsh  map_1736779221.yaml  map_start.zsh  start.zsh
data/data2d/ros_frog/bag_files/: convert.yaml  process_traj.py  serialize_traj.py  traj_raw.pkl
data/data2d/ros_frog/bag_files/bag_files/traj/: metadata.yaml  traj_0.mcap
data/data2d/ros_frog/bag_files/ros2_output/: metadata.yaml
data/data2d/ros_frog/bag_files/subset/: metadata.yaml  subset_0.db3
data/data2d/ros_frog/bag_files/traj/: traj_0.mcap
data/data2d/ros_frog/bag_files/traj_old/: metadata.yaml  traj_0.db3
data/data2d/ros_frog/config/: localization.yaml  mapper_params_online_async.yaml
data/data2d/ros_frog/maps/: frog.poly  map3.yaml  pcm_to_poly.py
data/data2d/ros_frog/src/frog_publisher/: package.xml  setup.cfg  setup.py  tmp.txt
data/data2d/ros_frog/src/frog_publisher/frog_publisher/: main.py
data/data2d/ros_frog/src/frog_publisher/launch/: frog.launch.py
examples/: demo_lab446.py  playground.py  sdsl_visualization.py  visualize_FdgV.py
examples/old/: frog_visualization.py  playground.py
experiments/: exp_k_k_prime_uniform.py
resources/maps/: frog.poly
resources/maps/2d/: frog.poly
results/: exp_k_k_prime_uniform.db  exp_k_k_prime_uniform_00.db  exp_k_k_prime_uniform_small.db
results/notebooks/: exp_k_k_prime_uniform.ipynb
scripts/: common.py  run_exp_k_k_prime_uniform.py
sdsl/: CMakeLists.txt  README.md  conanfile.txt  pyproject.toml  requirements.txt  setup.py
sdsl/include/: constants.hpp  math_utils.hpp  random_utils.hpp  sdsl.hpp
sdsl/include/actions/: action_R3xS2.hpp
sdsl/include/bindings/: sdsl_binding.hpp  sdsl_cgal.hpp
sdsl/include/configurations/: config_R2xS1.hpp  config_R3xS1.hpp  configuration.hpp
sdsl/include/environments/: env_R2.hpp  env_R2_arrangement.hpp  env_R3_pcd.hpp  environment.hpp
sdsl/include/predicates/: predicate.hpp  predicate_dynamic.hpp  predicate_static.hpp
sdsl/src/: sdsl_py.cpp
sdsl/src/bindings/: sdsl_bindings_2d.cpp  sdsl_bindings_3d.cpp  sdsl_bindings_util.cpp
sdsl/src/sdsl/: __init__.py  dynamic_obstacles.py  simulation.py
sdsl/src/sdsl/loaders/: __init__.py  load_pcd.py
sdsl/src/sdsl/visualization/: __init__.py  visualize_pcd_2d.py  visualize_pcd_3d.py  visualize_voxel_2d.py  visualize_voxel_3d.py  viz2d.py
tests/configurations/: test_R2xS1.py  test_R2xS1_Voxel.py  test_R3xS1.py  test_R3xS1_Voxel.py
tests/environment/: test_Env_R2.py  test_Env_R2_Arrangement.py  test_Env_R3_PCD.py  test_Env_R3_PCD_2d.py  test_Env_R3_PCD_3d.py
tests/localization/: test_localize_R3_pcd_2d.py  test_localize_R3_pcd_3d.py
tests/math_utils/: test_max_min_on_trig_range.py
